--- a/kubernetes/apps/develop/kustomization.yaml
+++ b/kubernetes/apps/develop/kustomization.yaml
@@ -1,8 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- ../production/media/media-namespace.yaml
-- ../production/media/media-volume.yaml
+#- ../production/media/media-namespace.yaml
+#- ../production/media/media-volume.yaml
+- bazarr.yaml
 - sonarr.yaml
 patches:
   - patch: |-
