--- a/kubernetes/clusters/develop/infrastructure.yaml
+++ b/kubernetes/clusters/develop/infrastructure.yaml
@@ -13,7 +13,7 @@ spec:
   path: ./kubernetes/infrastructure
   prune: true
   validation: client
-  postBuild:
+  postBuild: # https://github.com/fluxcd/helm-operator/issues/120
     substitute: {}
     substituteFrom:
       - kind: ConfigMap
