--- a/kubernetes/infrastructure/metallb/metallb.yaml
+++ b/kubernetes/infrastructure/metallb/metallb.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   addresses:
   - ${METAL_LB_RANGE}
+  autoAssign: false
 ---
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
