--- a/kubernetes/settings/production/settings.yaml
+++ b/kubernetes/settings/production/settings.yaml
@@ -6,4 +6,6 @@ metadata:
 data:
   DOMAIN_NAME: chickenwaffles.net
   METAL_LB_RANGE: 192.168.0.241-192.168.0.254
-  
+  INGRESS_EXTERNAL_IP: 192.168.0.241
+  INGRESS_INTERNAL_IP: 192.168.0.242
+  UNIFI_IP: 192.168.0.243
