--- a/kubernetes/apps/production/media/prowlarr.yaml
+++ b/kubernetes/apps/production/media/prowlarr.yaml
@@ -55,17 +55,21 @@ spec:
   selector:
     app: prowlarr
 ---
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
   name: prowlarr-ingress
   namespace: media
 spec:
-  entryPoints:
-  - web
-  routes:
-    - match: PathPrefix(`/prowlarr`)
-      kind: Rule
-      services:
-        - name: prowlarr
-          port: 9696
+  ingressClassName: nginx
+  rules:
+  - host: media.${DOMAIN_NAME}
+    http:
+      paths:
+      - path: /prowlarr
+        pathType: Prefix
+        backend:
+          service:
+            name: prowlarr
+            port:
+              number: 9696
