--- a/kubernetes/apps/production/media/radarr.yaml
+++ b/kubernetes/apps/production/media/radarr.yaml
@@ -55,17 +55,21 @@ spec:
   selector:
     app: radarr
 ---
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
   name: radarr-ingress
   namespace: media
 spec:
-  entryPoints:
-  - web
-  routes:
-    - match: PathPrefix(`/radarr`)
-      kind: Rule
-      services:
-        - name: radarr
-          port: 7878
+  ingressClassName: nginx
+  rules:
+  - host: media.${DOMAIN_NAME}
+    http:
+      paths:
+      - path: /radarr
+        pathType: Prefix
+        backend:
+          service:
+            name: radarr
+            port:
+              number: 7878
