--- a/kubernetes/clusters/production/infrastructure.yaml
+++ b/kubernetes/clusters/production/infrastructure.yaml
@@ -11,3 +11,8 @@ spec:
   path: ./kubernetes/infrastructure
   prune: true
   validation: client
+  postBuild: # https://github.com/fluxcd/helm-operator/issues/120
+    substitute: {}
+    substituteFrom:
+      - kind: ConfigMap
+        name: cluster-settings
