--- a/kubernetes/clusters/develop/infrastructure.yaml
+++ b/kubernetes/clusters/develop/infrastructure.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   interval: 5m0s
   dependsOn:
-    - name: settings
+    - name: cluster-settings
   sourceRef:
     kind: GitRepository
     name: flux-system
