--- a/kubernetes/clusters/develop/apps.yaml
+++ b/kubernetes/clusters/develop/apps.yaml
@@ -14,3 +14,9 @@ spec:
   prune: true
   wait: true
   timeout: 5m0s
+  validation: client
+  postBuild: # https://github.com/fluxcd/helm-operator/issues/120
+    substitute: {}
+    substituteFrom:
+      - kind: ConfigMap
+        name: cluster-settings
