--- a/kubernetes/clusters/production/infrastructure.yaml
+++ b/kubernetes/clusters/production/infrastructure.yaml
@@ -4,7 +4,9 @@ metadata:
   name: infrastructure
   namespace: flux-system
 spec:
-  interval: 10m0s
+  interval: 5m0s
+  dependsOn:
+    - name: cluster-settings
   sourceRef:
     kind: GitRepository
     name: flux-system
