--- a/kubernetes/apps/develop/kustomization.yaml
+++ b/kubernetes/apps/develop/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-#- ../production/media/media-namespace.yaml
+- ../production/media/media-namespace.yaml
 #- ../production/media/media-volume.yaml
 - bazarr.yaml
 - sonarr.yaml
