deploy cert-manager and azure secrets

--- a/bare-metal/Makefile
+++ b/bare-metal/Makefile
@@ -7,13 +7,13 @@ venv:
 	. .venv/bin/activate; ansible-galaxy install -r requirements.yml
 
 ansible-k3s-dev:
-	ansible-playbook -i ./inventory/inventory-develop.yml k3scluster.yml --ask-pass --ask-become-pass
+	. .venv/bin/activate; ansible-playbook -i ./inventory/inventory-develop.yml k3scluster.yml --ask-pass --ask-become-pass
 
 ansible-k3s-prod:
-	ansible-playbook -i ./inventory/inventory-prod.yml k3scluster.yml --ask-pass --ask-become-pass
+	. .venv/bin/activate; ansible-playbook -i ./inventory/inventory-prod.yml k3scluster.yml --ask-pass --ask-become-pass
 
 ansible-flux-dev:
-	ansible-playbook -i ./inventory/inventory-develop.yml localhost.yml --ask-pass --ask-become-pass
+	. .venv/bin/activate; ansible-playbook -i ./inventory/inventory-develop.yml localhost.yml --ask-pass --ask-become-pass
 
 ansible-flux-prod:
-	ansible-playbook -i ./inventory/inventory-prod.yml localhost.yml --ask-pass --ask-become-pass
+	. .venv/bin/activate; ansible-playbook -i ./inventory/inventory-prod.yml localhost.yml --ask-pass --ask-become-pass
