--- a/bare-metal/roles/k3s/vars/main.yml
+++ b/bare-metal/roles/k3s/vars/main.yml
@@ -11,3 +11,5 @@ k3s_server_manifests_urls:
     filename: longhorn.yml
   - url: https://raw.githubusercontent.com/metallb/metallb/v0.13.4/config/manifests/metallb-native.yaml
     filename: metallb-native.yaml
+  - url: https://github.com/cert-manager/cert-manager/releases/download/v1.9.1/cert-manager.yaml
+    filename: cert-manager.yaml
