--- a/kubernetes/apps/production/media/bazarr.yaml
+++ b/kubernetes/apps/production/media/bazarr.yaml
@@ -106,6 +106,8 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-issuer
   name: bazarr-ingress
   namespace: media
 spec:
@@ -121,3 +123,6 @@ spec:
             name: bazarr
             port:
               number: 6767
+  tls:
+  - hosts:
+    - media.${DOMAIN_NAME}
