--- a/kubernetes/apps/production/media/radarr.yaml
+++ b/kubernetes/apps/production/media/radarr.yaml
@@ -58,6 +58,8 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-issuer
   name: radarr-ingress
   namespace: media
 spec:
@@ -73,3 +75,6 @@ spec:
             name: radarr
             port:
               number: 7878
+  tls:
+  - hosts:
+    - media.${DOMAIN_NAME}
