--- a/kubernetes/apps/production/media/sabnzbd.yaml
+++ b/kubernetes/apps/production/media/sabnzbd.yaml
@@ -58,6 +58,8 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-issuer
   name: sabnzbd-ingress
   namespace: media
 spec:
@@ -73,3 +75,6 @@ spec:
             name: sabnzbd
             port:
               number: 8080
+  tls:
+  - hosts:
+    - media.${DOMAIN_NAME}
