--- a/kubernetes/apps/production/unifi/unifi.yaml
+++ b/kubernetes/apps/production/unifi/unifi.yaml
@@ -81,6 +81,8 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-issuer
   name: unifi-ingress
   namespace: unifi
 spec:
@@ -96,3 +98,6 @@ spec:
             name: unifi
             port:
               number: 8443
+  tls:
+  - hosts:
+    - mgmt.${DOMAIN_NAME}
