--- a/kubernetes/clusters/develop/flux-system/gotk-sync.yaml
+++ b/kubernetes/clusters/develop/flux-system/gotk-sync.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   interval: 1m0s
   ref:
-    branch: ingress-metallb
+    branch: ssl-security
   secretRef:
     name: flux-system
   url: ssh://git@github.com/cfergs/kubernetes-homelab
