--- a/kubernetes/infrastructure/ingress/internal.yaml
+++ b/kubernetes/infrastructure/ingress/internal.yaml
@@ -423,6 +423,7 @@ spec:
         - --validating-webhook=:8443
         - --validating-webhook-certificate=/usr/local/certificates/cert
         - --validating-webhook-key=/usr/local/certificates/key
+        - --default-ssl-certificate=cert-manager/domain-wildcard
         env:
         - name: POD_NAME
           valueFrom:
