--- a/kubernetes/infrastructure/longhorn/longhorn-ingress.yml
+++ b/kubernetes/infrastructure/longhorn/longhorn-ingress.yml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-issuer
     nginx.ingress.kubernetes.io/rewrite-target: /$2
   name: longhorn-ingress
   namespace: longhorn-system
@@ -18,3 +19,6 @@ spec:
             name: longhorn-frontend
             port:
               number: 80
+  tls:
+  - hosts:
+    - mgmt.${DOMAIN_NAME}
