--- a/kubernetes/settings/production/settings.yaml
+++ b/kubernetes/settings/production/settings.yaml
@@ -9,3 +9,7 @@ data:
   INGRESS_EXTERNAL_IP: 192.168.0.241
   INGRESS_INTERNAL_IP: 192.168.0.242
   UNIFI_IP: 192.168.0.243
+
+  AZURE_VAULT_NAME: chickenwaffles-keyvault
+  AZURE_TENANT_ID: e6d53a80-38c0-45ee-8b0e-ff7db3484ad5 # https://petri.com/finding-identifier-azure-office-365-tenants/ , https://stackoverflow.com/questions/45661109/are-azure-subscription-id-aad-tenant-id-and-aad-app-client-id-considered-secre
+  LETSENCRYPT_SERVER: https://acme-staging-v02.api.letsencrypt.org/directory
