--- a/kubernetes/clusters/develop/infrastructure.yaml
+++ b/kubernetes/clusters/develop/infrastructure.yaml
@@ -12,6 +12,7 @@ spec:
     name: flux-system
   path: ./kubernetes/infrastructure
   prune: true
+  timeout: 5m0s
   validation: client
   postBuild: # https://github.com/fluxcd/helm-operator/issues/120
     substitute: {}
