--- a/bare-metal/inventory/inventory-prod.yml
+++ b/bare-metal/inventory/inventory-prod.yml
@@ -15,8 +15,8 @@ k3s_cluster:
       ansible_host: 192.168.0.225
     crackers:
       ansible_host: 192.168.0.226
-    # mindy:
-    #  ansible_host: 192.168.0.227
+    mindy:
+      ansible_host: 192.168.0.227
   vars:
     ansible_connection: paramiko # don't need to apt-get sshpass
     ansible_user: ubuntu
