allow pod to redeploy to another instance

--- a/kubernetes/infrastructure/cert-manager/cloudflare-secret.yaml
+++ b/kubernetes/infrastructure/cert-manager/cloudflare-secret.yaml
@@ -22,30 +22,41 @@ spec:
           objectVersion: ""
     tenantId: ${AZURE_TENANT_ID}
 ---
-kind: Pod
-apiVersion: v1
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: azure-cloudflare-api-secret
   namespace: cert-manager
+  labels:
+    app: azure-cloudflare-api-secret
 spec:
-  containers:
-  - name: azure-cloudflare-api-secret
-    image: busybox:1.35.0
-    command:
-      - "/bin/sleep"
-      - "10000"
-    volumeMounts:
-    - name: azure-cloudflare-api-secret
-      mountPath: /mnt/secrets-store
-      readOnly: true
-    securityContext:
-      allowPrivilegeEscalation: false
-  volumes:
-    - name: azure-cloudflare-api-secret
-      csi:
-        driver: secrets-store.csi.k8s.io
-        readOnly: true
-        volumeAttributes:
-          secretProviderClass: azure-kv
-        nodePublishSecretRef:
-          name: azure-secrets-store-cred
+  replicas: 1
+  selector:
+    matchLabels:
+      app: azure-cloudflare-api-secret
+  template:
+    metadata:
+      labels:
+        app: azure-cloudflare-api-secret
+    spec:
+      volumes:
+      - name: azure-cloudflare-api-secret
+        csi:
+          driver: secrets-store.csi.k8s.io
+          readOnly: true
+          volumeAttributes:
+            secretProviderClass: azure-kv
+          nodePublishSecretRef:
+            name: azure-secrets-store-cred
+      containers:
+      - name: azure-cloudflare-api-secret
+        image: busybox:1.35.0
+        command:
+          - "/bin/sleep"
+          - "10000"
+        volumeMounts:
+        - name: azure-cloudflare-api-secret
+          mountPath: /mnt/secrets-store
+          readOnly: true
+        securityContext:
+          allowPrivilegeEscalation: false
