--- a/kubernetes/apps/production/home-automation/kustomization.yaml
+++ b/kubernetes/apps/production/home-automation/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
 - ha-namespace.yaml
 - ha-volume.yaml
-- home-assistant.yaml
 - mosquitto.yaml
 - ser2sock.yaml
 - zigbee2mqtt.yaml
+- home-assistant
