--- a/kubernetes/apps/production/home-automation/ha-volume.yaml
+++ b/kubernetes/apps/production/home-automation/ha-volume.yaml
@@ -9,9 +9,10 @@ metadata:
 spec:
   accessMode: rwx
   dataLocality: best-effort
+  replicaAutoBalance: "best-effort"
   engineImage: longhornio/longhorn-engine:v1.3.0
   frontend: blockdev
-  numberOfReplicas: 2
+  numberOfReplicas: 3
   size: "5368709120"
 ---
 kind: PersistentVolume
