--- a/kubernetes/infrastructure/kustomization.yaml
+++ b/kubernetes/infrastructure/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- reloader
 - csi-secrets-driver  # cannot get consistent install via k8s manifests & helm wont work
 - azure-secrets
 - cert-manager
