--- a/kubernetes/apps/production/unifi/unifi-volume.yaml
+++ b/kubernetes/apps/production/unifi/unifi-volume.yaml
@@ -9,6 +9,7 @@ metadata:
 spec:
   accessMode: rwx
   dataLocality: best-effort
+  replicaAutoBalance: "best-effort"
   engineImage: longhornio/longhorn-engine:v1.3.0
   frontend: blockdev
   numberOfReplicas: 3
