--- a/kubernetes/infrastructure/longhorn/kustomization.yaml
+++ b/kubernetes/infrastructure/longhorn/kustomization.yaml
@@ -2,4 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - longhorn-class.yaml
+- longhorn-default-settings.yaml 
 - longhorn-ingress.yml
+- longhorn-snapshot.yml
