--- a/kubernetes/apps/production/home-automation/kustomization.yaml
+++ b/kubernetes/apps/production/home-automation/kustomization.yaml
@@ -2,8 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ha-namespace.yaml
-- ha-volume.yaml
+- ha-volume.yaml # keep until sure to delete
 - mosquitto.yaml
 - ser2sock.yaml
-- zigbee2mqtt.yaml
+- zigbee2mqtt
 - home-assistant
