--- a/kubernetes/apps/production/home-automation/zigbee2mqtt/kustomization.yaml
+++ b/kubernetes/apps/production/home-automation/zigbee2mqtt/kustomization.yaml
@@ -1,6 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- configuration-configmap.yaml
-- hass-volume.yaml
-- hass-deploy.yaml
+- zigbee2mqtt-volume.yaml
+- zigbee2mqtt-deploy.yaml
