--- a/kubernetes/apps/production/unifi/unifi-volume.yaml
+++ b/kubernetes/apps/production/unifi/unifi-volume.yaml
@@ -5,12 +5,10 @@ metadata:
   namespace: longhorn-system
 spec:
   accessMode: rwx
-  dataLocality: best-effort
   engineImage: longhornio/longhorn-engine:v1.3.0
   frontend: blockdev
-  numberOfReplicas: 3
   replicaAutoBalance: best-effort
-  size: "5368709120"
+  size: "5368709120" # 5GB
 ---
 kind: PersistentVolume
 apiVersion: v1
@@ -24,11 +22,9 @@ spec:
   csi:
     driver: driver.longhorn.io
     fsType: ext4
-    volumeAttributes:
-      numberOfReplicas: "2"
     volumeHandle: unifi-volume
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: longhorn-customised
+  storageClassName: longhorn-static
   volumeMode: Filesystem
 ---
 kind: PersistentVolumeClaim
@@ -42,6 +38,6 @@ spec:
   resources:
     requests:
       storage: 5Gi
-  storageClassName: longhorn-customised
+  storageClassName: longhorn-static
   volumeMode: Filesystem
   volumeName: unifi-volume-pv
