--- a/kubernetes/apps/production/media/radarr/kustomization.yaml
+++ b/kubernetes/apps/production/media/radarr/kustomization.yaml
@@ -2,4 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - radarr-volume.yaml
+- radarr-nfs-movies.yaml
 - radarr-deploy.yaml
