--- a/kubernetes/apps/production/media/sonarr/sonarr-deploy.yaml
+++ b/kubernetes/apps/production/media/sonarr/sonarr-deploy.yaml
@@ -23,6 +23,9 @@ spec:
       - name: sonarr-volume
         persistentVolumeClaim:
           claimName: sonarr-volume-pvc
+      - name: tvshows-volume
+        persistentVolumeClaim:
+          claimName: sonarr-tvshows-pvc
       containers:
       - name: sonarr
         image: ghcr.io/k8s-at-home/sonarr
@@ -34,6 +37,8 @@ spec:
         volumeMounts:
         - name: sonarr-volume
           mountPath: /config
+        - name: tvshows-volume
+          mountPath: /media
         securityContext:
           allowPrivilegeEscalation: false
 ---
