--- a/kubernetes/settings/develop/settings.yaml
+++ b/kubernetes/settings/develop/settings.yaml
@@ -13,3 +13,5 @@ data:
   AZURE_VAULT_NAME: chickenwaffles-vault-dev
   AZURE_TENANT_ID: e6d53a80-38c0-45ee-8b0e-ff7db3484ad5 # https://petri.com/finding-identifier-azure-office-365-tenants/ , https://stackoverflow.com/questions/45661109/are-azure-subscription-id-aad-tenant-id-and-aad-app-client-id-considered-secre
   LETSENCRYPT_SERVER: https://acme-staging-v02.api.letsencrypt.org/directory
+
+  NAS_IP: 192.168.0.11
